<resources>
    <string name="app_name">YiQiHouse</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="ok">完成</string>
    <string name="activity_home_bottom_home">首页</string>
    <string name="activity_home_bottom_say">业主说</string>
    <string name="activity_home_bottom_msg">消息</string>
    <string name="activity_home_bottom_mine">我的</string>
    <string name="article_textview_text">装修学堂</string>
    <string name="article_textview_content">内容</string>
    <string name="article_textview_time">6小时前</string>
    <string name="article_textview_comments">0</string>
    <string name="article_textview_concerns">12</string>
    <string name="post_textview_name">name</string>
    <string name="post_textview_time">时间</string>
    <string name="post_textview_add_attention">加关注</string>
    <string name="article_post_form">来自于</string>
    <string name="recycle_selectionkey">装修公司</string>
    <string name="recycle_activity">同城活动</string>
    <string name="recycle_school">装修学堂</string>
    <string name="recycle_my_budget">装修预算</string>
    <string name="recycle_category">建材家居</string>
    <string name="recycle_renderings_new">效果图</string>
    <string name="recycle_self_order">自助下单</string>
    <string name="recycle_design_measure">设计/量房</string>
    <string name="fragment_home_title_bar_search">搜索用户/帖子</string>
    <string name="fragment_home_title_bar_city">成都</string>
    <string name="activity_search_cancle">取消</string>
    <string name="fragment_message_call_me">//@我</string>
    <string name="fragment_message_newcomment" >新的评论</string>
    <string name="fragment_message_new_zan">新的赞</string>
    <string name="fragment_message_System_notification">系统通知</string>
    <string name="sex">选择性别:</string>
    <string name="birthday">选择生日:</string>
    <string name="decorationstage">装修阶段:</string>
    <string name="beingdecorated" >正在装修</string>
    <string name="renovationplan">装修计划</string>
    <string name="AlreadyCheckIn">已经入住</string>
    <string name="noPlan">暂无计划</string>
    <string name="welcomeApp">进入一起装修</string>
    <string name="welcometitle_1">让我们花10秒钟了解你</string>
    <string name="welcometitle_2">以便发现你最需要的装修内容</string>
    <string name="fragment_message_message">消息</string>
    <string name="away">取消</string>
    <string name="lagon_text_loginOrRegister">登录/注册</string>
    <string name="sms_text_login">短信快捷登录</string>
    <string name="activity_zizhu_text_title">自助下单</string>
    <string name="forgotpass_title">忘记密码</string>
    <string name="zizhu_yiqiwang">一起网保障</string>
    <string name="fragment_my_orders">我的订单</string>
    <string name="fragment_my_collect">我的收藏</string>
    <string name="fragment_my_like">我的喜欢</string>
    <string name="fragment_my_setting">设置</string>
    <string name="fragment_my_feedback">意见反馈</string>
    <string name="integral_rules">积分规则</string>
    <string name="recycle_foot_nomoredata">没有更多数据了~</string>
    <string name="recycle_foot_fail">加载失败~</string>
    <string name="decorate_company">装修公司</string>
    <string name="new_price">677元/㎡</string>
    <string name="new_house_decoration">新房整装</string>
    <string name="old_house_decoration">老房整装</string>
    <string name="old_price">677+117元/㎡</string>
    <string name="look_site_playing">看现场</string>
    <string name="site_playing">工地直播</string>
    <string name="yiqi_group">一起团队</string>
    <string name="decorate_playing">装修直播</string>
    <string name="decoration_precess">装修进度</string>
    <string name="order">我要预约</string>
    <string name="answer">在线答疑</string>


    <string name="fepb_space">空间</string>
    <string name="fepb_style">风格</string>
    <string name="fepb_color">颜色</string>
    <string name="fepb_local">局部</string>
    <string name="end_date">报名截止日期:</string>

    <string name="school_recycleview_fooder_text_nomoredata">没有更多数据了</string>
    <string name="feps_item_textcontent">图片简介</string>
    <string name="feps_item_des">描述</string>

    <string name="area">%1$s平</string>
    <string name="budget">%1$s万</string>
    <string name="comefrom_textview">精选自%1$s</string>

    <string name="asli_phonetext">电话号</string>
    <string name="jindu">装修进度</string>

    <string name="textview_review_number">回贴</string>

    <string name="plate_fragment_firsttitle">%1$s装修总论坛</string>
    <string name="plate_fragment_secondetitle">装修选购区</string>
    <string name="plate_fragment_thirdtitle">品牌热议区</string>
    <string name="gridview_item_threadsnum">总贴：%1$s</string>
    <string name="finish">完成</string>
    <string name="nofinish">未完成</string>
    <string name="finishing">进行中</string>

    <string name="popupwindow_linearlayout1">发帖</string>
    <string name="popupwindow_linearlayout2">晒单</string>
    <string name="popupwindow_linearlayout3">日记</string>
    <string name="popupwindow_linearlayout4">投诉/表演</string>

    <string name="related_article">相关文章推荐</string>
    <string name="communita_article_detail">评论</string>
    <string name="input_communite">输入评论</string>
    <string name="all_tag_classify_text">全部装修流程</string>
    <string name="all_tag_classify_decorate_pre">装修前</string>
    <string name="all_tag_classify_decorate_ping">装修中</string>
    <string name="all_tag_classify_decorate_finish">装修后</string>
    <string name="comments">评论(0)</string>

    <string name="text_autoorder_yiqinet">一起网保障</string>

    <string name="login_register_cancle">取消</string>
    <string name="login_register">登录/注册</string>
    <string name="login_register_identity">请输入账号</string>
    <string name="login_register_password">6-20位字母，数字和符号</string>
    <string name="login_register_fastlogin">短信快捷登录</string>
    <string name="login_register_forget_password">忘记密码？</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_identity">请输入手机号码</string>
    <string name="forget_password_finish">完成</string>
    <string name="forgetpassword_agin_password">请设置新的密码</string>
    <string name="forgetpassword_get_identifyingcode">请输入验证码</string>
    <string name="forget_password_identifyingcode_textview">获取验证码</string>
    <string name="recycle_foot_loadmore">上滑加载更多</string>


</resources>
