<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/activity_home_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
    </FrameLayout>


    <!--底部的分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ColorGray"
        />

    <!--底部功能栏-->
    <LinearLayout
        android:id="@+id/activity_home_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_home_bottom_height"
        android:background="@android:color/white"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <CheckedTextView
            android:id="@+id/activity_home_bottom_home"
            style="@style/HomeActityBottom"
            android:drawableTop="@drawable/main_tab_home_bg"
            android:text="@string/activity_home_bottom_home" />

        <CheckedTextView
            android:id="@+id/activity_home_bottom_say"
            style="@style/HomeActityBottom"
            android:drawableTop="@drawable/main_tab_say_bg"
            android:text="@string/activity_home_bottom_say"
            />

        <CheckedTextView
            android:id="@+id/activity_home_bottom_msg"
            android:drawableTop="@drawable/main_tab_msg_bg"
            android:text="@string/activity_home_bottom_msg"
            style="@style/HomeActityBottom"
            />

        <CheckedTextView
            android:id="@+id/activity_home_bottom_mine"
            android:drawableTop="@drawable/main_tab_mine_bg"
            android:text="@string/activity_home_bottom_mine"
            style="@style/HomeActityBottom"
            />
    </LinearLayout>

</LinearLayout>
