<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/colorQGray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        >
        <TextView
            android:id="@+id/login_register_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/login_register_cancle"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/login_register"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/phone_number"
            />
        <EditText
            android:id="@+id/login_register_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_register_identity"
            android:textSize="13sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/password"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/login_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:password="true"
            android:hint="@string/login_register_password"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_password_unlook"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/login_register_fastlogin"
            />
        <TextView
            android:id="@+id/login_register_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/login_register_forget_password"/>
    </RelativeLayout>
    <Button
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:text="@string/login_register"
        android:background="@drawable/login_register_button"/>
</LinearLayout>