<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/mf_recycleview_post_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/ColorGray"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/mf_recycleview_post_textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_textview_name"
            android:layout_toRightOf="@+id/mf_recycleview_post_image"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/mf_recycleview_post_textview_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/mf_recycleview_post_image"
            android:layout_below="@+id/mf_recycleview_post_textview_name"
            android:text="@string/post_textview_time"
            android:textColor="@color/ColorGray"
            android:textSize="18sp"
            />
        <ImageView
            android:id="@+id/mf_recycleview_post_image_add_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_attention_tab"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_textview_add_attention"
            android:layout_below="@+id/mf_recycleview_post_image_add_attention"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/mf_recycleview_post_image_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/ColorGray"

        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
      >
        <TextView
            android:id="@+id/mf_recycleview_post_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/article_post_form"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginTop="3dp"
           />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/looked_hui"
                android:layout_toLeftOf="@+id/mf_recycleview_post_concern"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/mf_recycleview_article_concern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/mf_recycleview_post_comments_image"
                android:text="@string/article_textview_concerns"
                android:textColor="@color/ColorGray"
                android:textSize="12sp"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:id="@+id/mf_recycleview_post_comments_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comment_normal"
                android:layout_toLeftOf="@+id/mf_recycleview_article_comments"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/mf_recycleview_post_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_textview_comments"
                android:textColor="@color/ColorGray"
                android:textSize="12sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>