<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorQGray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        >
        <ImageView
            android:id="@+id/login_register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_new_nor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/forget_password"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/phone_number"
            />
        <EditText
            android:id="@+id/forget_password_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/forget_password_identity"
            android:textSize="13sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/password"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/forgetpassword_get_identifyingcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:password="true"
            android:hint="@string/forgetpassword_get_identifyingcode"
            />
        <TextView
            android:id="@+id/forget_password_identifyingcode_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:text="@string/forget_password_identifyingcode_textview"
            android:background="@color/colorGreen"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/password"
            android:layout_marginLeft="15dp"/>
        <EditText
            android:id="@+id/forgetpassword_agin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:password="true"
            android:hint="@string/forgetpassword_agin_password"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_password_unlook"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:text="@string/forget_password_finish"
        android:background="@drawable/login_register_button"/>
</LinearLayout>